--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wasmachine huren zonder gedoe | Snel geregeld</title>
+
+    <!-- Google Analytics (VERVANG G-XXXXXXXXXX door je Measurement ID) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-XXXXXXXXXX');
+    </script>
+    <title>Wasmachine huren Amersfoort | Vanaf €20/mnd | Witgoednodig.nl</title>
     <meta name="description"
-        content="Wasmachine of droger huren voor een vast bedrag per maand. Inclusief onderhoud en snelle levering. Ideaal voor studenten, expats en jonge werkenden.">
+        content="Wasmachine of droger huren in Amersfoort en omgeving. Vanaf €20 per maand, inclusief onderhoud en snelle levering. Ideaal voor studenten, expats en gezinnen in de regio Amersfoort.">
+    <meta name="keywords"
+        content="wasmachine huren, droger huren, wasmachine huren amersfoort, witgoed verhuur, wasmachine leasen, droger leasen, was-droogcombinatie huren, witgoed huren amersfoort, wasmachine verhuur utrecht, goedkoop wasmachine huren">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://witgoednodig.nl/">
+
+    <!-- Geo Meta Tags for Local SEO -->
+    <meta name="geo.region" content="NL-UT">
+    <meta name="geo.placename" content="Amersfoort">
+    <meta name="geo.position" content="52.1561;5.3878">
+    <meta name="ICBM" content="52.1561, 5.3878">
+
+    <!-- Open Graph / Social -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Wasmachine huren Amersfoort | Vanaf €20/mnd | Witgoednodig.nl">
+    <meta property="og:description"
+        content="Wasmachine of droger huren in Amersfoort en omgeving. Inclusief onderhoud, snel geleverd. Vanaf €20 per maand.">
+    <meta property="og:url" content="https://witgoednodig.nl/">
+    <meta property="og:image"
+        content="https://images.unsplash.com/photo-1626806787461-102c1bfaaea1?auto=format&fit=crop&w=1200&q=80">
+    <meta property="og:locale" content="nl_NL">
+    <meta property="og:site_name" content="Witgoednodig.nl">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -14,21 +45,132 @@
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="stylesheet" href="style.css">
 
-    <!-- SEO Microdata -->
+    <!-- Structured Data - LocalBusiness -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "WashLease Verhuur",
       "image": "https://images.unsplash.com/photo-1626806787461-102c1bfaaea1?auto=format&fit=crop&w=800&q=80",
-      "description": "Verhuur van betrouwbare wasmachines en drogers voor studenten, expats en huishoudens. Geen aanschafkosten, wél de beste service.",
-      "telephone": "+31612345678",
+      "description": "Wasmachine of droger huren in Amersfoort en omgeving. Vanaf €20 per maand, inclusief onderhoud en snelle levering.",
+      "url": "https://witgoednodig.nl",
       "priceRange": "€20 - €30",
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Nederland",
+        "addressLocality": "Amersfoort",
+        "addressRegion": "Utrecht",
+        "postalCode": "3811",
         "addressCountry": "NL"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 52.1561,
+        "longitude": 5.3878
+      },
+      "areaServed": {
+        "@type": "GeoCircle",
+        "geoMidpoint": {
+          "@type": "GeoCoordinates",
+          "latitude": 52.1561,
+          "longitude": 5.3878
+        },
+        "geoRadius": "20000"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Witgoed Verhuur",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Wasmachine huren"
+            },
+            "price": "20.00",
+            "priceCurrency": "EUR",
+            "priceSpecification": {
+              "@type": "UnitPriceSpecification",
+              "unitText": "MONTH"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Droger huren"
+            },
+            "price": "20.00",
+            "priceCurrency": "EUR",
+            "priceSpecification": {
+              "@type": "UnitPriceSpecification",
+              "unitText": "MONTH"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Was-droogcombinatie huren"
+            },
+            "price": "30.00",
+            "priceCurrency": "EUR",
+            "priceSpecification": {
+              "@type": "UnitPriceSpecification",
+              "unitText": "MONTH"
+            }
+          }
+        ]
       }
+    }
+    </script>
+
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Is er een borg bij het huren van een wasmachine?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nee, er is geen borg. Alleen bij schade kan er een vergoeding gevraagd worden tot maximaal €300. Dit geldt uitsluitend bij roekeloos gedrag, moedwillige schade of directe gevolgen van slecht onderhoud."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Wat is de minimale huurperiode?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Onze minimale huurperiode is 6 maanden. Daarna is het per maand opzegbaar."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Zit onderhoud inbegrepen bij de huurprijs?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ja, absoluut! Technisch onderhoud en normale slijtage zijn 100% inbegrepen in de maandprijs."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Wat gebeurt er bij een storing?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Meld de storing en we plannen direct een monteur in. Als we het apparaat niet op locatie kunnen maken, zorgen we zo snel mogelijk voor een gelijkwaardig vervangend model."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Hoe snel kunnen jullie leveren in Amersfoort?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Na de goedkeuring van je aanvraag kunnen we in de meeste gevallen binnen 2 tot 5 werkdagen het apparaat bij je thuis aansluiten."
+          }
+        }
+      ]
     }
     </script>
 </head>
@@ -103,7 +245,7 @@
                     <ul class="features">
                         <li><i class="ph ph-check"></i> Gereviseerd kwaliteitsmodel</li>
                         <li><i class="ph ph-check"></i> Inclusief onderhoud</li>
-                        <li><i class="ph ph-check"></i> Kapot? Binnen 48u herstel</li>
+                        <li><i class="ph ph-check"></i> Kapot? Snel gerepareerd of vervangen</li>
                     </ul>
                     <a href="#contact" class="btn btn-primary-outline">Vraag huurvoorstel aan</a>
                 </div>
@@ -116,7 +258,7 @@
                     <ul class="features">
                         <li><i class="ph ph-check"></i> Energiezuinige warmtepompdroger</li>
                         <li><i class="ph ph-check"></i> Inclusief onderhoud</li>
-                        <li><i class="ph ph-check"></i> Kapot? Binnen 48u herstel</li>
+                        <li><i class="ph ph-check"></i> Kapot? Snel gerepareerd of vervangen</li>
                     </ul>
                     <a href="#contact" class="btn btn-primary-outline">Vraag huurvoorstel aan</a>
                 </div>
@@ -136,8 +278,8 @@
                 </div>
             </div>
 
-            <p class="pricing-disclaimer">Eventuele borg, levering en voorwaarden afhankelijk van regio / model. Minimum
-                looptijd is 12 maanden.</p>
+            <p class="pricing-disclaimer">Levering en voorwaarden afhankelijk van regio / model. Minimum
+                looptijd is 6 maanden.</p>
         </div>
     </section>
 
@@ -148,7 +290,7 @@
                 <div class="usp-item animate-on-scroll">
                     <div class="usp-icon"><i class="ph ph-medal"></i></div>
                     <h4>Gereviseerde modellen</h4>
-                    <p>Duurzame en grondig geteste AAA-merken, klaar voor jarenlang gebruik.</p>
+                    <p>Duurzame en grondig geteste kwaliteitsmerken, klaar voor jarenlang gebruik.</p>
                 </div>
                 <div class="usp-item animate-on-scroll delay-1">
                     <div class="usp-icon"><i class="ph ph-truck"></i></div>
@@ -243,7 +385,8 @@
                 <div class="step animate-on-scroll delay-1">
                     <div class="step-number">2</div>
                     <h3>Wij nemen contact op</h3>
-                    <p>Binnen 24 uur bellen we je op om de levering of plaatsing af te stemmen en je vragen te
+                    <p>Binnen 24 uur wordt er contact opgenomen om de levering of plaatsing af te stemmen en je vragen
+                        te
                         beantwoorden.</p>
                 </div>
                 <div class="step animate-on-scroll delay-2">
@@ -323,8 +466,9 @@
                         <i class="ph ph-caret-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>Ja, we vragen een eenmalige borg van €50 aan het begin van het contract. Deze krijg je na het
-                            beëindigen van het abonnement (en een onbeschadigd apparaat) uiteraard weer terug.</p>
+                        <p>Nee, er is geen borg. Alleen bij schade kan er een vergoeding gevraagd worden tot maximaal
+                            €300. Dit geldt uitsluitend bij roekeloos gedrag, moedwillige schade of directe gevolgen van
+                            slecht onderhoud.</p>
                     </div>
                 </div>
 
@@ -334,9 +478,7 @@
                         <i class="ph ph-caret-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>Onze minimale huurperiode is doorgaans 12 maanden. Daarna is het per maand opzegbaar. Zoek je
-                            voor een kortere termijn (bijv. expats)? Neem dan even contact met ons op voor de
-                            mogelijkheden.</p>
+                        <p>Onze minimale huurperiode is 6 maanden. Daarna is het per maand opzegbaar.</p>
                     </div>
                 </div>
 
@@ -396,22 +538,8 @@
             <div class="contact-card animate-on-scroll">
                 <div class="contact-info">
                     <h2>Neem contact op</h2>
-                    <p>Binnen 1 minuut aangevraagd, we nemen snel contact met je op met een passend voorstel.</p>
-
-                    <div class="contact-details">
-                        <a href="tel:+31612345678" class="contact-link">
-                            <i class="ph-fill ph-phone-call"></i>
-                            06 - 12 34 56 78
-                        </a>
-                        <a href="mailto:info@washlease.nl" class="contact-link">
-                            <i class="ph-fill ph-envelope-simple"></i>
-                            info@washlease.nl
-                        </a>
-                        <a href="#" class="contact-link whatsapp-link">
-                            <i class="ph-fill ph-whatsapp-logo"></i>
-                            Stuur een WhatsApp
-                        </a>
-                    </div>
+                    <p>Via het formulier kunt u contact opnemen. Binnen 24 uur wordt er contact opgenomen met een
+                        passend voorstel.</p>
                 </div>
 
                 <div class="contact-form-wrapper">
@@ -481,9 +609,7 @@
             <div class="footer-contact">
                 <h4>Contact</h4>
                 <ul>
-                    <li>KvK: 12345678</li>
-                    <li>Ma - Vrij: 09:00 - 17:00</li>
-                    <li>Servicegebied: Regio Randstad (vul aan)</li>
+                    <li>Servicegebied: Amersfoort en omgeving (20 km)</li>
                 </ul>
             </div>
 
@@ -502,6 +628,12 @@
             </div>
         </div>
     </footer>
+
+    <!-- WhatsApp Floating Button (VERVANG 31600000000 door het echte nummer) -->
+    <a href="https://wa.me/31600000000?text=Hallo%2C%20ik%20ben%20ge%C3%AFnteresseerd%20in%20het%20huren%20van%20een%20wasmachine."
+        class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat via WhatsApp">
+        <i class="ph-fill ph-whatsapp-logo"></i>
+    </a>
 
     <!-- Mobile Sticky CTA -->
     <div class="sticky-cta">
