--- a/index.html
+++ b/index.html
@@ -629,8 +629,8 @@
         </div>
     </footer>
 
-    <!-- WhatsApp Floating Button (VERVANG 31600000000 door het echte nummer) -->
-    <a href="https://wa.me/31600000000?text=Hallo%2C%20ik%20ben%20ge%C3%AFnteresseerd%20in%20het%20huren%20van%20een%20wasmachine."
+    <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/31637232397?text=Hallo%2C%20ik%20ben%20ge%C3%AFnteresseerd%20in%20het%20huren%20van%20een%20wasmachine."
         class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat via WhatsApp">
         <i class="ph-fill ph-whatsapp-logo"></i>
     </a>
