feat: wire contact form to Resend via Vercel serverless function
- Created api/contact.js serverless endpoint
- Form submits via fetch with loading state
- Sends formatted HTML email via Resend API
- Shows success message or error feedback

--- a/index.html
+++ b/index.html
@@ -543,8 +543,7 @@
                 </div>
 
                 <div class="contact-form-wrapper">
-                    <form class="contact-form"
-                        onsubmit="event.preventDefault(); alert('Bedankt voor je aanvraag! We nemen snel contact op.');">
+                    <form class="contact-form" id="contactForm">
                         <div class="form-group">
                             <label for="name">Naam *</label>
                             <input type="text" id="name" placeholder="Jouw naam" required>
